<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/statistics_page"
        android:enabled="true"
        android:icon="@drawable/statistics"
        android:title="@string/statistics"
        />

    <item
        android:id="@+id/history_page"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/history"
        />

    <item
        android:id="@+id/settings_page"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        />
</menu>