<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_statistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@null"
    tools:context=".screens.StatisticsFragment">


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/statistics_recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="vertical"
        android:scrollbarSize="2dp"
        android:visibility="gone"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Api call error"
        android:textAlignment="center"
        android:textSize="17sp"
        android:textColor="@color/gray500"
        android:maxLines="2"
        android:fontFamily="@font/source_sans_pro_regular"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>